// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stderr: <cmd> --parallel 1`] = `
"lerna info version __TEST_VERSION__
lerna info exec in 2 package(s): ls"
`;

exports[`stderr: --parallel <cmd> 1`] = `
"lerna info version __TEST_VERSION__
lerna info exec in 2 package(s): ls"
`;

exports[`stderr: echo LERNA_PACKAGE_NAME 1`] = `"lerna info version __TEST_VERSION__"`;

exports[`stderr: ls --ignore 1`] = `
"lerna info version __TEST_VERSION__
lerna info ignore package-1"
`;

exports[`stderr: ls --scope 1`] = `
"lerna info version __TEST_VERSION__
lerna info scope package-1"
`;

exports[`stderr: without -- 1`] = `"lerna info version __TEST_VERSION__"`;

exports[`stdout: echo LERNA_PACKAGE_NAME 1`] = `
"package-1
package-2"
`;

exports[`stdout: ls --ignore 1`] = `
"file-2.js
package.json"
`;

exports[`stdout: ls --scope 1`] = `
"file-1.js
package.json"
`;

exports[`stdout: without -- 1`] = `
"file-1.js
package.json
file-2.js
package.json"
`;
